# ChangeLog for www-apps/Apache-Gallery
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/Apache-Gallery/ChangeLog,v 1.20 2006/04/20 03:37:36 weeve Exp $

  20 Apr 2006; Jason Wever <weeve@gentoo.org> Apache-Gallery-0.6.ebuild:
  Stable on SPARC.

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org>
  Apache-Gallery-0.6.ebuild, Apache-Gallery-1.0_rc3.ebuild:
  Virtuals for perl-core

  18 Jan 2006; Renat Lumpau <rl03@gentoo.org> Apache-Gallery-0.6.ebuild,
  Apache-Gallery-1.0_rc3.ebuild:
  Removed virtual/x11 dependency. Per upstream, it's only needed for imlib

*Apache-Gallery-1.0_rc3 (11 Jan 2006)

  11 Jan 2006; Renat Lumpau <rl03@gentoo.org> -Apache-Gallery-0.8.ebuild,
  -Apache-Gallery-0.8-r1.ebuild, -Apache-Gallery-0.8-r2.ebuild,
  -Apache-Gallery-0.9.1.ebuild, +Apache-Gallery-1.0_rc3.ebuild:
  Version bump wrt bug #118621, cleaned out old versions.

  23 Oct 2005; Renat Lumpau <rl03@gentoo.org> Apache-Gallery-0.6.ebuild,
  Apache-Gallery-0.8.ebuild, Apache-Gallery-0.8-r1.ebuild,
  Apache-Gallery-0.8-r2.ebuild:
  Fixed emerge --config wrt bug #109482.

  24 Sep 2005; Bryan Østergaard <kloeri@gentoo.org>
  Apache-Gallery-0.9.1.ebuild:
  Add back ~alpha keyword, bug 104737.

  16 Sep 2005; Aron Griffis <agriffis@gentoo.org> Apache-Gallery-0.6.ebuild:
  Mark 0.6 stable on alpha

  03 Sep 2005; Jason Wever <weeve@gentoo.org> Apache-Gallery-0.9.1.ebuild:
  Added ~sparc keyword as it was inadvertently dropped in the version bump.

  08 Aug 2005; Renat Lumpau <rl03@gentoo.org> Apache-Gallery-0.9.1.ebuild:
  Fixed libapreq2 dependency wrt bug #101329.

  05 Aug 2005; Renat Lumpau <rl03@gentoo.org> +files/postinstall-en.txt:
  Added missing postinstall-en.txt

*Apache-Gallery-0.9.1 (02 Aug 2005)

  02 Aug 2005; Renat Lumpau <rl03@gentoo.org>
  +files/76_apache1-gallery.conf, +files/76_apache2-gallery.conf,
  +Apache-Gallery-0.9.1.ebuild:
  Version bump (#97231). Fixed Apache paths (#79432).
