@@ -1,33 +1,54 @@
-MD5 000fa9b5ef5d35e5ca0aaef75681ef9f Apache-Gallery-0.6.ebuild 1411
-RMD160 483dd7bf92dc36f321f0df5bce3fded2db09ebe3 Apache-Gallery-0.6.ebuild 1411
-SHA256 cdb72d1b1d3af88f8b721e7b6ca108d428a9c8f8e00d5f802f021b9408d1e74e Apache-Gallery-0.6.ebuild 1411
-MD5 8e45319acd5d3d97de4287482876d74b Apache-Gallery-1.0_rc3.ebuild 1612
-RMD160 635737ebc8239849d1cd66fd2ae889b6c061454a Apache-Gallery-1.0_rc3.ebuild 1612
-SHA256 b48aa91ef2e7a14568b88b62680d74cbe0740a17e5b40953cdcbca4f451bcba7 Apache-Gallery-1.0_rc3.ebuild 1612
-MD5 5e79ed5d3555036c6ebcdfa27580f4a4 ChangeLog 4463
-RMD160 4dc3097c75d3b41e73f72a89474f2b01e6766adb ChangeLog 4463
-SHA256 56cf65832d701a426bba359376c3652161752e7df44a0a7dbf9cb10f2449fcf0 ChangeLog 4463
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+AUX 76_apache-gallery.conf 1461 RMD160 030e59073d909e3d9102c19b138bacf0634daa33 SHA1 f1feae51f9f8039198fb3f556cc32540955972e1 SHA256 9b4c23adf32a6f75525e1c46394b25d60d66e88e6837a5fda002e8f62513268c
 MD5 862b7db14e194f66c345bdaee71e0d00 files/76_apache-gallery.conf 1461
 RMD160 030e59073d909e3d9102c19b138bacf0634daa33 files/76_apache-gallery.conf 1461
 SHA256 9b4c23adf32a6f75525e1c46394b25d60d66e88e6837a5fda002e8f62513268c files/76_apache-gallery.conf 1461
+AUX 76_apache1-gallery.conf 738 RMD160 b8f7924d1e7932e24cd9f6a3aada68e90d16557f SHA1 83122406948b180a0732be458153b228207640e6 SHA256 2d45cf1d8979fb511b67e5592361eab2c6e82991bae6f7d47ba7c9cb5d545eca
 MD5 9e0a44b67c66dc689a3769827946f3f8 files/76_apache1-gallery.conf 738
 RMD160 b8f7924d1e7932e24cd9f6a3aada68e90d16557f files/76_apache1-gallery.conf 738
 SHA256 2d45cf1d8979fb511b67e5592361eab2c6e82991bae6f7d47ba7c9cb5d545eca files/76_apache1-gallery.conf 738
+AUX 76_apache2-gallery.conf 1442 RMD160 8f67efcebb0e340d65555088721c65a02d72b479 SHA1 2cf79d18da5824d0e74e9fa231eaea8b18f69fd4 SHA256 f6c0099476bdec5f495e7de4cbdff088ed0ce01ef8993ba657a463cdb365a7ab
 MD5 004b7af7fb9d52598cf9ed7db91697c6 files/76_apache2-gallery.conf 1442
 RMD160 8f67efcebb0e340d65555088721c65a02d72b479 files/76_apache2-gallery.conf 1442
 SHA256 f6c0099476bdec5f495e7de4cbdff088ed0ce01ef8993ba657a463cdb365a7ab files/76_apache2-gallery.conf 1442
+AUX apache-gallery.conf 757 RMD160 bf624af252a3401281914b738cf332cf6f8e5f2e SHA1 ddc4c5586d73089eb3dfadfa6d58cd89c8972bc8 SHA256 e58154cd6feccb2d2560c428b0523f161377bc921768d79a863fdf1c6649fdea
 MD5 d9a1361f6d0f1dac9def27a0b57cf30c files/apache-gallery.conf 757
 RMD160 bf624af252a3401281914b738cf332cf6f8e5f2e files/apache-gallery.conf 757
 SHA256 e58154cd6feccb2d2560c428b0523f161377bc921768d79a863fdf1c6649fdea files/apache-gallery.conf 757
-MD5 f372bf3342f63c4d3a680051e80b5571 files/digest-Apache-Gallery-0.6 69
-RMD160 56ba9f715f340a2edbd6f38eca070e936b0f1228 files/digest-Apache-Gallery-0.6 69
-SHA256 762a7423c0d45bf5c6a8a9997db99137533406325bd17dc63f8d85f52e2b08b5 files/digest-Apache-Gallery-0.6 69
-MD5 af084bb70094ac69911af16d31ebf83f files/digest-Apache-Gallery-1.0_rc3 72
-RMD160 e82cc8ef9947bae762583d3173c2f44bf09605a9 files/digest-Apache-Gallery-1.0_rc3 72
-SHA256 ef22902ff1a5e511ce7c8ed296e963694fa62ea79b24b56014137cedbf92e5fa files/digest-Apache-Gallery-1.0_rc3 72
+AUX postinstall-en.txt 90 RMD160 66f525195a80158ecca50bbf3628d5a9f8c53eeb SHA1 34e0b57ef25c318f8fee3a49be879193a889730a SHA256 d46f8343e97402107390a651ee3e31adfcd9034d9f88d4ae5dcc83061851dfc1
 MD5 5edd6a9688af26ad0b3f71d8e2ad8770 files/postinstall-en.txt 90
 RMD160 66f525195a80158ecca50bbf3628d5a9f8c53eeb files/postinstall-en.txt 90
 SHA256 d46f8343e97402107390a651ee3e31adfcd9034d9f88d4ae5dcc83061851dfc1 files/postinstall-en.txt 90
+DIST Apache-Gallery-0.6.tar.gz 66429 RMD160 1c4820a482b0d944070d16c838a084b107fc85ca SHA1 de66cfe0698e28124b2c014eec34e6043f99d14f SHA256 0017162b72d9ec5e4507dd2de78dc292ed52b6113fa8cfdcd21ef6c452c8a97a
+DIST Apache-Gallery-1.0RC3.tar.gz 83891 RMD160 eeceea7a0a74ba01c02368a9d5b87f90405b4ac9 SHA1 c0590e860c4ec72f8d429cb6d0a609413d4d2a66 SHA256 9a7ab7566d811bb21dd27bc9a27cdcfb2c7a96c01727ad9a04313fc80e68e1f7
+EBUILD Apache-Gallery-0.6.ebuild 1393 RMD160 1d78670c11768a246097274ccdda6ce23a69d87f SHA1 157c8663e83def75cc7d617ba40283c2efe65f0c SHA256 fa991394f58c0c16f24ec00f53c9f687388c575a54c6fb2472e5ee1a5dcefca6
+MD5 9885a12b4c3b022eeec3cec091e94c19 Apache-Gallery-0.6.ebuild 1393
+RMD160 1d78670c11768a246097274ccdda6ce23a69d87f Apache-Gallery-0.6.ebuild 1393
+SHA256 fa991394f58c0c16f24ec00f53c9f687388c575a54c6fb2472e5ee1a5dcefca6 Apache-Gallery-0.6.ebuild 1393
+EBUILD Apache-Gallery-1.0_rc3.ebuild 1612 RMD160 635737ebc8239849d1cd66fd2ae889b6c061454a SHA1 4d33e87f345f9ec9c89f23ad0e109023610b2d24 SHA256 b48aa91ef2e7a14568b88b62680d74cbe0740a17e5b40953cdcbca4f451bcba7
+MD5 8e45319acd5d3d97de4287482876d74b Apache-Gallery-1.0_rc3.ebuild 1612
+RMD160 635737ebc8239849d1cd66fd2ae889b6c061454a Apache-Gallery-1.0_rc3.ebuild 1612
+SHA256 b48aa91ef2e7a14568b88b62680d74cbe0740a17e5b40953cdcbca4f451bcba7 Apache-Gallery-1.0_rc3.ebuild 1612
+MISC ChangeLog 4550 RMD160 b0c467bcd02563f9f67a4f7fcd9c6459c0c1dfd1 SHA1 dc9c7263039d9fe2781b9ed727f3db8813ff80f7 SHA256 7efa9ac8e589c6e6537e79ae3e858c891ec00b62bdd68326db1f4aa4cf7e4dca
+MD5 2d6d67b643f0abe9c314486089476c44 ChangeLog 4550
+RMD160 b0c467bcd02563f9f67a4f7fcd9c6459c0c1dfd1 ChangeLog 4550
+SHA256 7efa9ac8e589c6e6537e79ae3e858c891ec00b62bdd68326db1f4aa4cf7e4dca ChangeLog 4550
+MISC metadata.xml 444 RMD160 76bcdd678f035f6db8d3b4614ece057afdc3cdff SHA1 70dd1ad4455524fe9946dcde25aa614ce2a45837 SHA256 0ac26539638d4ffc9930bc7edc25018e360593d700345d7d0568ea131f987606
 MD5 2a5bdc93be7720976d88be5034a17df2 metadata.xml 444
 RMD160 76bcdd678f035f6db8d3b4614ece057afdc3cdff metadata.xml 444
 SHA256 0ac26539638d4ffc9930bc7edc25018e360593d700345d7d0568ea131f987606 metadata.xml 444
+MD5 ad37278381e834b14d5815c542908632 files/digest-Apache-Gallery-0.6 253
+RMD160 b78b4e8dd7e2f9bfbf0f91a714c257bc61e7dce1 files/digest-Apache-Gallery-0.6 253
+SHA256 260b1325c455c62dec02eb996d3ec6993cc11612edccec56bae0c5bbc19b5822 files/digest-Apache-Gallery-0.6 253
+MD5 2c19f78f91f1bbe181b6dbbbe26e8682 files/digest-Apache-Gallery-1.0_rc3 262
+RMD160 a0678e5762862a8282f2957c8e3b036492f803ef files/digest-Apache-Gallery-1.0_rc3 262
+SHA256 8dfc14d18f24df6db61b2f9354d61b79f9b6c919d14be98e49addf1722cc6be9 files/digest-Apache-Gallery-1.0_rc3 262
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.3 (GNU/Linux)
+
+iD8DBQFEsWqpEzitwsaoONoRAmv0AJ49h331dJkV1VFWoQP7n5iatJVmpQCfTtWl
+mVmxaAmoopAezjnV7lmBHU0=
+=oxtF
+-----END PGP SIGNATURE-----
