@@ -1,1 +1,3 @@
 MD5 78efe9884dc242ca50d4cc2e2fca9f44 Apache-Gallery-0.6.tar.gz 66429
+RMD160 1c4820a482b0d944070d16c838a084b107fc85ca Apache-Gallery-0.6.tar.gz 66429
+SHA256 0017162b72d9ec5e4507dd2de78dc292ed52b6113fa8cfdcd21ef6c452c8a97a Apache-Gallery-0.6.tar.gz 66429
