@@ -1,1 +1,3 @@
 MD5 a705cbecf2f124d18a3bde3fc36384e8 Apache-Gallery-1.0RC3.tar.gz 83891
+RMD160 eeceea7a0a74ba01c02368a9d5b87f90405b4ac9 Apache-Gallery-1.0RC3.tar.gz 83891
+SHA256 9a7ab7566d811bb21dd27bc9a27cdcfb2c7a96c01727ad9a04313fc80e68e1f7 Apache-Gallery-1.0RC3.tar.gz 83891
