@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/Apache-Gallery
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/Apache-Gallery/ChangeLog,v 1.20 2006/04/20 03:37:36 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/Apache-Gallery/ChangeLog,v 1.21 2006/07/09 20:44:18 rl03 Exp $
+
+  09 Jul 2006; Renat Lumpau <rl03@gentoo.org> Apache-Gallery-0.6.ebuild:
+  einfo->elog
 
   20 Apr 2006; Jason Wever <weeve@gentoo.org> Apache-Gallery-0.6.ebuild:
   Stable on SPARC.
